--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,7 +42,11 @@ header {
 
   h1 {
     span {
-      color: $primary-color;
+      color: transparent;
+      transition: color 0.9s ease;
+      .fade {
+        color: $primary-color;
+      }
     }
   }
   p {
@@ -57,6 +61,7 @@ header {
     margin: 3rem 0;
     font-size: 1.2rem;
     font-weight: bold;
+    padding: 0.6em 1.85em;
   }
 }
 
@@ -74,17 +79,43 @@ header {
       color: $primary-color;
       margin: 1em 0;
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 1.5rem;
     }
 
     p {
       margin: 1.5em auto;
       max-width: 46ch;
-      line-height: 2;
+      line-height: 1.7;
+    }
+
+    .tags {
+      ul {
+        display: flex;
+        justify-content: space-between;
+        padding: 0.5em 0;
+
+        li {
+          font-size: 0.6em;
+          background-color: #dedede;
+          border-radius: 4px;
+          padding: 0.7em;
+        }
+      }
+    }
+
+    .preview {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 1em;
+
+      .btn {
+        padding: 0.5em 1.5em;
+        font-size: 0.85em;
+      }
     }
 
     img {
-      border-radius: 1em;
+      margin: 1.5em 0;
     }
   }
   .blue {
@@ -93,6 +124,16 @@ header {
 
     h3 {
       color: white;
+    }
+
+    .tags {
+      li {
+        color: black;
+      }
+    }
+    .btn {
+      color: $primary-color;
+      background: white;
     }
   }
 
@@ -105,6 +146,7 @@ header {
     a {
       font-size: 1.5rem;
       color: white;
+      transition: 0.4s;
     }
 
     img {
@@ -113,23 +155,18 @@ header {
       width: auto;
       transform: translateY(0.3em);
     }
+
+    &:hover a {
+      transform: translateX(0.3em);
+    }
   }
 }
 
 .skills {
-  position: relative;
+  background-image: url("../img/skills-bg.png");
+  background-position: top center;
+  background-size: cover;
   text-align: center;
-  .bg {
-    background-image: url("../img/skills-bg.png");
-    background-position: center center;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    object-fit: cover;
-    z-index: -1;
-  }
 
   .card {
     h3 {
@@ -199,7 +236,8 @@ header {
 .contact {
   background-image: url("../img/contact-bg.png");
   background-position: center;
-  background-size: auto;
+  background-size: cover;
+  background-color: $primary-color;
 
   h2 {
     color: white;
@@ -211,10 +249,13 @@ header {
     display: flex;
     flex-direction: column;
     margin-bottom: 5rem;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 
     label {
       margin: 0.2em 0;
-      font-size: 1.5em;
+      font-size: 1.1em;
       border-width: 0.2px;
     }
 
@@ -228,6 +269,7 @@ header {
 
     .btn {
       margin: 1em 0;
+      font-size: 1.2rem;
     }
   }
 }
