--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -25,6 +25,7 @@
   .projects {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 1fr;
     text-align: left;
   }
 
@@ -95,10 +96,6 @@
         line-height: 2;
       }
 
-      img {
-        max-height: 165px;
-      }
-
       &:nth-child(3) {
         background-color: white;
         color: black;
@@ -109,6 +106,10 @@
         .btn {
           background: $primary-color;
           color: white;
+
+          &:first-child {
+            cursor: not-allowed;
+          }
         }
       }
       &:nth-child(4) {
@@ -127,6 +128,10 @@
         .btn {
           background: white;
           color: $primary-color;
+
+          &:first-child {
+            cursor: not-allowed;
+          }
         }
       }
     }
@@ -167,10 +172,6 @@
     padding-bottom: 4em;
     .card {
       margin: 0;
-
-      .card__desc {
-        display: flex;
-      }
     }
   }
 
