--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -54,5 +54,7 @@
 
 .glass {
   background-color: #0000001c;
-  backdrop-filter: blur(0.3em);
+  @media (min-width: 999px) {
+    backdrop-filter: blur(0.3em);
+  }
 }
