--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,10 @@ header {
   }
   nav {
     display: none;
+
+    li a:hover {
+      color: $primary-color;
+    }
   }
 }
 
@@ -77,13 +81,12 @@ header {
     background-color: rgb(236, 236, 236);
     h3 {
       color: $primary-color;
-      margin: 1em 0;
-      font-weight: bold;
       font-size: 1.5rem;
     }
 
     p {
       margin: 1.5em auto;
+      font-size: 0.85em;
       max-width: 46ch;
       line-height: 1.7;
     }
@@ -168,6 +171,10 @@ header {
   background-size: cover;
   text-align: center;
 
+  h2 {
+    margin-bottom: 0.5rem;
+  }
+
   .card {
     h3 {
       font-weight: bold;
@@ -211,20 +218,34 @@ header {
     background-color: white;
 
     h3 {
-      font-weight: bold;
       font-size: 1.3rem;
-      margin-bottom: 1em;
+      text-align: left;
+
+      &::first-letter {
+        border-bottom: $primary-color 3px solid;
+      }
     }
 
     p {
       color: black;
       line-height: 1.8;
-      text-align: left;
-      padding-right: 0.5em;
+      text-align: center;
+      max-width: 45ch;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .title {
+      margin-bottom: 1.5em;
+      justify-content: space-between;
+      align-items: center;
+      gap: 0;
+      grid-template-columns: 3fr 1fr;
     }
 
     img {
-      width: 2rem;
+      width: 1.5rem;
+      justify-self: flex-end;
     }
 
     .flex {
@@ -296,6 +317,10 @@ footer {
       margin: 1em 0;
       li a {
         color: black;
+
+        &:hover {
+          color: $primary-color;
+        }
       }
     }
   }
