implemented fuctionality for the hamburger menu & contact form; adjusted the hero image; rewoked the services section;

--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -53,8 +53,9 @@
 }
 
 .glass {
-  background-color: #0000001c;
+  background-color: #3d64e11f;
   @media (min-width: 999px) {
     backdrop-filter: blur(0.3em);
+    box-shadow: 0px 1px 10px #00000047;
   }
 }
