--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -9,7 +9,7 @@
 
   header {
     .menu {
-      display: none;
+      display: none !important;
     }
 
     nav {
@@ -18,6 +18,7 @@
         color: black;
         font-size: 1.15rem;
         margin-left: 3em;
+        font-weight: 500;
       }
     }
   }
@@ -61,6 +62,27 @@
       margin-right: 0;
     }
   }
+
+  .wyg {
+    .cards {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      grid-auto-columns: 1fr;
+      grid-auto-rows: 1fr;
+      gap: 6em 2em;
+
+      max-width: 100%;
+      margin: 6em 0;
+
+      .card {
+        margin: 0 !important;
+
+        .title {
+          margin-top: 0;
+        }
+      }
+    }
+  }
 }
 
 // desktop
@@ -74,18 +96,18 @@
 
   .hero {
     text-align: left;
+    min-height: 87vh;
+    background-image: url(../img/guy-sm.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: auto;
 
-    img {
-      position: absolute;
-      right: -4%;
-      bottom: 0;
-      max-width: 40%;
+    .content {
+      align-items: flex-start;
     }
   }
 
   .work {
-    margin-top: -5em;
-
     .projects {
       grid-template-columns: repeat(3, 1fr);
       border: 1px solid #e0e0e0;
@@ -162,16 +184,21 @@
     }
   }
 
-  .wyg .flex {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1.5em;
-  }
-
   .wyg {
-    padding-bottom: 4em;
-    .card {
-      margin: 0;
+    .cards {
+      gap: 5em 4em;
+      margin: 6.5em 0;
+
+      .title {
+        display: grid;
+        grid-template-rows: 1fr 2fr;
+        align-items: center;
+        gap: 1em;
+
+        h3 {
+          margin-bottom: 0;
+        }
+      }
     }
   }
 
@@ -190,6 +217,11 @@
     margin: 0 10%;
   }
 
+  .hero {
+    background-image: url(../img/guy.png);
+    background-size: contain;
+  }
+
   .hero .bg {
     background-image: url(../img/hero-bg-big.png);
   }
@@ -202,8 +234,17 @@
     justify-content: space-around;
   }
 
-  .wyg .flex {
-    gap: 3.3em;
+  .wyg {
+    .cards {
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: none;
+      gap: 2em;
+      margin: 7.5em 0;
+
+      .title {
+        gap: 1.5em;
+      }
+    }
   }
 
   .contact {
@@ -218,13 +259,5 @@
   }
   .container {
     margin: 0 13%;
-  }
-
-  .cards {
-    gap: 4em;
-  }
-
-  .wyg .flex {
-    gap: 4em;
   }
 }
