--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,20 +28,79 @@ header {
       color: $primary-color;
     }
   }
+
+  .mobile-nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50vw;
+    height: 100vh;
+    background-color: #000000e0;
+
+    ul {
+      flex-direction: column;
+      justify-content: center !important;
+      text-align: center;
+
+      li {
+        margin: 2em 0;
+        border-bottom: 1px solid white;
+        padding: 0.7em 0;
+        a {
+          color: white;
+          font-size: 1.1em;
+          font-weight: bold;
+        }
+
+        &:first-child {
+          border: none;
+          margin-top: 0;
+          cursor: pointer;
+        }
+      }
+    }
+
+    img {
+      height: 1.5rem;
+      width: auto;
+      margin: 0 0.4em;
+      transform: translateY(0.3em);
+      cursor: pointer;
+    }
+
+    display: none;
+  }
 }
 
 .hero {
   text-align: center;
   min-height: 100vh;
+  display: flex;
+
+  .container {
+    height: auto;
+    width: 100%;
+  }
   .bg {
     background-image: url("../img/hero-bg.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    object-fit: cover;
     z-index: -1;
+  }
+
+  .content {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   h1 {
@@ -183,8 +242,11 @@ header {
     h3 {
       font-weight: bold;
       font-size: 1.3rem;
-      text-decoration: underline;
       margin-bottom: 1em;
+
+      &::first-letter {
+        border-bottom: 2px solid currentColor;
+      }
     }
 
     p {
@@ -203,6 +265,9 @@ header {
     .flex {
       justify-content: space-between;
     }
+    &:hover {
+      transform: translateY(10px);
+    }
   }
 }
 
@@ -218,47 +283,66 @@ header {
     flex-direction: column;
   }
 
+  .cards {
+    display: grid;
+    gap: 1.5em;
+    max-width: 80%;
+    margin: auto;
+  }
+
   .card {
+    position: relative;
+    height: inherit;
     background-color: white;
+    padding: 1em;
 
-    h3 {
-      font-size: 1.3rem;
-      text-align: left;
-
-      &::first-letter {
-        border-bottom: $primary-color 3px solid;
-      }
+    img {
+      position: absolute;
+      width: 1.5rem;
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
-    p {
-      color: black;
-      line-height: 1.8;
-      text-align: center;
-      max-width: 45ch;
-      margin-left: auto;
-      margin-right: auto;
+    &::before {
+      content: "";
+      position: absolute;
+      background-color: white;
+      width: 4rem;
+      height: 4rem;
+      border-radius: 50%;
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: -1;
     }
 
     .title {
-      margin-bottom: 1.5em;
-      justify-content: space-between;
-      align-items: center;
-      gap: 0;
-      grid-template-columns: 3fr 1fr;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      margin-top: 0.4em;
+
+      h3 {
+        text-align: center;
+        font-size: 1.3em;
+        margin-bottom: 1em;
+      }
+
+      p {
+        color: black;
+        line-height: 1.8;
+        text-align: center;
+        font-size: 0.9em;
+      }
     }
 
-    img {
-      width: 1.5rem;
-      justify-self: flex-end;
-      transition: 0.4s;
+    &:last-child {
+      margin-bottom: 5em;
     }
-
-    .flex {
-      flex-direction: row;
-    }
-
-    &:hover img {
-      transform: scale(1.1);
+    &:hover {
+      transform: scale(1.015);
     }
   }
 }
