--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -28,6 +28,46 @@
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: 1fr;
     text-align: left;
+
+    .project {
+      &:nth-child(3) {
+        background-color: $primary-color;
+        color: black;
+        h3,
+        p {
+          color: white;
+        }
+
+        .btn {
+          background: white;
+          color: $primary-color;
+
+          &:first-child {
+            cursor: not-allowed;
+          }
+        }
+      }
+      &:nth-child(4) {
+        background-color: #ececec;
+        color: $primary-color;
+        h3 {
+          color: $primary-color;
+        }
+
+        p {
+          color: black;
+        }
+
+        .btn {
+          background: $primary-color;
+          color: white;
+
+          &:first-child {
+            cursor: not-allowed;
+          }
+        }
+      }
+    }
   }
 
   .project-end {
@@ -42,10 +82,10 @@
     background-size: cover;
     .cards {
       grid-template-columns: repeat(3, 1fr);
-      gap: 2em;
       margin: 6em 0;
 
       .card {
+        margin: 0 !important;
         p {
           color: white;
         }
@@ -121,7 +161,6 @@
   .work {
     .projects {
       grid-template-columns: repeat(3, 1fr);
-      border: 1px solid #e0e0e0;
     }
     .project {
       p {
@@ -130,41 +169,27 @@
       }
 
       &:nth-child(3) {
-        background-color: white;
-        color: black;
+        background-color: #ececec;
         h3 {
           color: $primary-color;
         }
-
+        p {
+          color: black;
+        }
         .btn {
           background: $primary-color;
           color: white;
-
-          &:first-child {
-            cursor: not-allowed;
-          }
         }
       }
       &:nth-child(4) {
         background-color: $primary-color;
-        color: white;
-        h3 {
+        h3,
+        p {
           color: white;
         }
-
-        .tags {
-          li {
-            color: black;
-          }
-        }
-
         .btn {
           background: white;
           color: $primary-color;
-
-          &:first-child {
-            cursor: not-allowed;
-          }
         }
       }
     }
