--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -2,5 +2,5 @@ $font-stack: "Segoe UI", sans-serif;
 
 // colors
 $primary-color: #3d64e1;
-$secondary-color: #4666cc;
+$secondary-color: #172654;
 $dark-color: #6e6e6e;
