projects bg color adjustments

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -133,7 +133,7 @@ header {
 
   .project {
     padding: 1.5em;
-    background-color: #ececec;
+    background-color: #fdfdfd;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
