--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -53,7 +53,7 @@
         }
       }
       &:nth-child(4) {
-        background-color: #ececec;
+        background-color: #fdfdfd;
         color: $primary-color;
         h3 {
           color: $primary-color;
@@ -179,7 +179,7 @@
       }
 
       &:nth-child(3) {
-        background-color: #ececec;
+        background-color: #fdfdfd;
         h3 {
           color: $primary-color;
         }
